--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   </style>
 </head>
 <body>
-  <img src="https://i.imgur.com/bUkK3Gx.png" alt="Imgur image">
+  <img src="https://i.ibb.co/C06H0P2/IMG-20251017-211414.jpg" alt="ibb image">
 </body>
 </html>
