--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   </style>
 </head>
 <body>
-  <img src="https://i.ibb.co/C06H0P2/IMG-20251017-211414.jpg" alt="ibb image">
+  <img src="https://ik.imagekit.io/t3155gk1n/17102025_111450.png?updatedAt=1760710652129" alt="ImageKit image">
 </body>
 </html>
