--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   </style>
 </head>
 <body>
-  <img src="https://ik.imagekit.io/t3155gk1n/17102025_111450.png?updatedAt=1760710652129" alt="ImageKit image">
+  <img src="https://iili.io/KvawYQf.png" alt="FreeImage photo">
 </body>
 </html>
