--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   </style>
 </head>
 <body>
-  <img src="https://iili.io/KvawYQf.png" alt="FreeImage photo">
+  <img src="https://iili.io/KvcvRGs.png" alt="FreeImage photo">
 </body>
 </html>
